force-app/main/default/objects/cgcloud__Payment_Tactic_Fund__c/cgcloud__Payment_Tactic_Fund__c.object-meta.xml
<CustomObject>
    <description>This Object is  relationship between Fund  and  Payment  Tactic  junction  objects</description>
    <label>Claim Tactic Fund</label>
    <nameField>
        <displayFormat>PTF-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Claim Tactic Funds</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>