force-app/main/default/objects/cgcloud__Payment_Tactic_Fund__c/fields/cgcloud__Anchor_Customer__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Anchor_Customer__c</fullName>
    <formula>cgcloud__Fund__r.cgcloud__Anchor_Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Anchor Customer</label>
    <type>Text</type>
</CustomField>