force-app/main/default/objects/cgcloud__Payment_Tactic_Fund__c/fields/cgcloud__Anchor_Product__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Anchor_Product__c</fullName>
    <formula>cgcloud__Fund__r.cgcloud__Anchor_Product__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Anchor Product</label>
    <type>Text</type>
</CustomField>