force-app/main/default/objects/cgcloud__Payment_Tactic_Fund__c/fields/cgcloud__Fund__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Fund__c</fullName>
    <label>Fund</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>$User.cgcloud__Sales_Org__c</field>
            <operation>equals</operation>
            <valueField>cgcloud__Fund__c.cgcloud__Sales_Org__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>cgcloud__Fund__c</referenceTo>
    <relationshipLabel>Claim Tactic Funds</relationshipLabel>
    <relationshipName>Payment_Tactic_Funds</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>