force-app/main/default/objects/cgcloud__Payment_Tactic_Fund__c/fields/cgcloud__Fund_Name__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Fund_Name__c</fullName>
    <formula>cgcloud__Fund__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fund Name</label>
    <type>Text</type>
</CustomField>