force-app/main/default/objects/cgcloud__Payment_Tactic_Fund__c/fields/cgcloud__Funding_Percent__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Funding_Percent__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Value that drives the amount distribution for the fund</description>
    <label>Funding %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>