force-app/main/default/objects/cgcloud__Payment_Tactic_Fund__c/fields/cgcloud__LE_Revenue__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__LE_Revenue__c</fullName>
    <description>Total value of KPI referenced in Fund LE Revenue field</description>
    <formula>cgcloud__Fund__r.cgcloud__LE_Revenue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LE Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>