force-app/main/default/objects/cgcloud__Payment_Tactic_Fund__c/fields/cgcloud__Payment_Age__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Payment_Age__c</fullName>
    <description>Reads Payment Age off of related Payment record, helpful for reporting purposes</description>
    <formula>cgcloud__Payment_Tactic__r.cgcloud__Payment__r.cgcloud__Payment_Age__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Claim Age</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>