force-app/main/default/objects/cgcloud__Payment_Tactic_Fund__c/fields/cgcloud__Payment_Anchor__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Payment_Anchor__c</fullName>
    <description>Reference to the Payment Anchor name to which the Payment Tactic is associated with.</description>
    <formula>cgcloud__Payment_Tactic__r.cgcloud__Payment__r.cgcloud__Payment_Anchor__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Claim Anchor</label>
    <type>Text</type>
</CustomField>