force-app/main/default/objects/cgcloud__Payment_Tactic_Fund__c/fields/cgcloud__Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Payment_Status__c</fullName>
    <defaultValue>$Label.cgcloud__New_Payment_Tactic_Fund_Default_Payment_Status</defaultValue>
    <label>Claim Status</label>
    <length>35</length>
    <type>Text</type>
</CustomField>