force-app/main/default/objects/cgcloud__Payment_Tactic_Fund__c/fields/cgcloud__Payment_Tactic__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Payment_Tactic__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Claim Tactic</label>
    <referenceTo>cgcloud__Payment_Tactic__c</referenceTo>
    <relationshipLabel>Claim Tactic Funds</relationshipLabel>
    <relationshipName>Payment_Tactic_Funds</relationshipName>
    <type>Lookup</type>
</CustomField>