force-app/main/default/objects/cgcloud__Payment_Tactic_Fund__c/fields/cgcloud__Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Payment_Type__c</fullName>
    <description>Reads Payment Type off of related Payment record, helpful for reporting purposes</description>
    <formula>cgcloud__Payment_Tactic__r.cgcloud__Payment__r.cgcloud__Payment_Type__c</formula>
    <label>Claim Type</label>
    <type>Text</type>
</CustomField>