force-app/main/default/objects/cgcloud__Payment_Tactic_Fund__c/fields/cgcloud__Promotion_Anchor__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Promotion_Anchor__c</fullName>
    <description>Reference to the Tactic Anchor name to which the Payment Tactic is associated with.</description>
    <formula>cgcloud__Payment_Tactic__r.cgcloud__Tactic__r.cgcloud__Anchor__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Promotion Anchor</label>
    <type>Text</type>
</CustomField>