force-app/main/default/objects/cgcloud__Payment_Tactic_Fund__c/fields/cgcloud__Promotion_Tactic__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Promotion_Tactic__c</fullName>
    <description>Reference to the Promotion Tactic to which the Payment Tactic is associated with.</description>
    <formula>cgcloud__Payment_Tactic__r.cgcloud__Promotion_Tactic__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Promotion - Tactic</label>
    <type>Text</type>
</CustomField>