force-app/main/default/objects/cgcloud__Payment_Tactic_Fund__c/validationRules/cgcloud__Amount_Must_Have_Valid_Numeric_Value.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Amount_Must_Have_Valid_Numeric_Value</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    $Setup.cgcloud__Validation_Rules_Setting__c.cgcloud__Bypass_Validation__c = FALSE,
    OR( cgcloud__Amount__c   &lt;= 0, ISBLANK( cgcloud__Amount__c ) )
)</errorConditionFormula>
    <errorDisplayField>cgcloud__Amount__c</errorDisplayField>
    <errorMessage>Amount must have a valid numeric value.</errorMessage>
</ValidationRule>