force-app/main/default/objects/cgcloud__Payment_Tactic_Fund__c/validationRules/cgcloud__Payment_Tactic_Is_Not_Changable.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Payment_Tactic_Is_Not_Changable</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
    $Setup.cgcloud__Validation_Rules_Setting__c.cgcloud__Bypass_Validation__c = FALSE,
    NOT (ISNEW()), 
    ISCHANGED( cgcloud__Payment_Tactic__c ) 
)</errorConditionFormula>
    <errorDisplayField>cgcloud__Payment_Tactic__c</errorDisplayField>
    <errorMessage>Cannot change payment tactic.</errorMessage>
</ValidationRule>