force-app/main/default/objects/cgcloud__Payment_Tactic_Fund__c/validationRules/cgcloud__Payment_Tactic_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Payment_Tactic_Required</fullName>
    <active>true</active>
    <description>Payment Tactic Required</description>
    <errorConditionFormula>AND( $Setup.cgcloud__Validation_Rules_Setting__c.cgcloud__Bypass_Validation__c = FALSE, ISBLANK( cgcloud__Payment_Tactic__c ))</errorConditionFormula>
    <errorDisplayField>cgcloud__Payment_Tactic__c</errorDisplayField>
    <errorMessage>Payment Tactic Required</errorMessage>
</ValidationRule>