force-app/main/default/objects/cgcloud__Payment_Tactic_Fund__c/listViews/cgcloud__All.listView-meta.xml
<ListView>
    <fullName>cgcloud__All</fullName>
    <columns>cgcloud__Fund_Name__c</columns>
    <columns>cgcloud__Description__c</columns>
    <columns>cgcloud__Anchor_Customer__c</columns>
    <columns>cgcloud__Anchor_Product__c</columns>
    <columns>cgcloud__Fund_Type__c</columns>
    <columns>cgcloud__Amount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>